this is translate in English

--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
 </head>
 <body>
     <form id="form">
-        <label>ismingizni kiriting:😊</label>
+        <label>Your name😊</label>
         <br>
         <input id="ism" type="text">
         <br>
-        <label>Malumotingizni kiriting:😊</label>
+        <label>Your information😊</label>
         <br>
         <textarea id="about" cols="30" rows="10"></textarea>
         <br>
-        <label>Fayl ichidagi rasmni tanlang!</label>
+        <label>Create your image</label>
         <br>
         <input type="file" id="rasm">
         <br>
-        <label>Jonatishga tayyormisz?</label>
+        <label>Are you ready to send?</label>
         <br>
         <input class="jonat" type="submit" onsubmit="getData">
         <br>
